# MentraOS

./: .gitignore  AGENTS.md  AUGMENTOS_CORE_MIC_SYSTEM.md  CLAUDE.md  MANAGED_STREAMING_DESIGN.md  README.md  eslint.config.js  eslint.config.mjs  glasses-compatibility.md  package-lock.json  package.json  pnpm-lock.yaml
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/: CMakeLists.txt  lc3_codec_wrapper.cpp
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/: CMakeLists.txt  Makefile  lc3_api.cpp  lc3_api_dec.cpp  lc3_api_enc.cpp
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/fixed_point/: Makefile  lc3plus_decode.cpp  lc3plus_encode.cpp
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/fixed_point/inc/: basop32.h  basop_mpy.h  basop_util.h  constants.h  defines.h  enh1632.h  enh40.h  enhUL32.h  functions.h  lc3.h  rom_basop_util.h  setup_dec_lc3.h  setup_enc_lc3.h  stl.h  tinywavein_c.h  tinywaveout_c.h
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/fixed_point/src/: Makefile  adjust_global_gain.c  al_fec.c  apply_global_gain.c  ari_codec.c  attack_detector.c  basop32.c  basop_mpy.c  basop_util.c  constants.c  cutoff_bandwidth.c  dct2.c  dct4.c  dec_entropy.c  dec_lc3.c  detect_cutoff_warped.c  enc_entropy.c  enc_lc3.c  enh1632.c  enh40.c  estimate_global_gain.c  fft.c  imdct.c  lc3.c  lc3_pre_encoding_process.c  levinson.c  ltpf_coder.c  ltpf_decoder.c  mdct.c  mdct_shaping.c  noise_factor.c  noise_filling.c  olpa.c  output_scaling.c  pc_apply.c  pc_classify.c  pc_main.c  pc_update.c  per_band_energy.c  plc_apply.c  (+34 more)
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/inc/: lc3_debug.h  lc3_process.h  smf_arm_dsp.h  smf_arm_dsp_c.h  smf_arm_dsp_m33.h
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/lc3plus/: Makefile  Makefile.fp  lc3plus_decode.cpp  lc3plus_encode.cpp
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/make/: Makefile
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/sneak_peek/: Android.bp  CMakeLists.txt  Makefile  Readme.txt
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/sneak_peek/Api/: Lc3Config.hpp  Lc3Decoder.hpp  Lc3Encoder.hpp
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/sneak_peek/Common/: DctIV.cpp  DctIV.hpp  Lc3Base.cpp  Lc3Base.h  Lc3Config.cpp  Makefile  cfft.cpp  cfft.hh
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/sneak_peek/Decoder/: ArithmeticDec.cpp  ArithmeticDec.hpp  BitReader.cpp  BitReader.hpp  DecoderFrame.cpp  DecoderFrame.hpp  Lc3Decoder.cpp  Lc3DecoderCommon.h  Lc3DecoderLtpf.cpp  Lc3DecoderLtpf.h  Lc3DecoderLtpfData.cpp  Lc3DecoderNoiseFilling.cpp  Lc3DecoderNoiseFilling.h  Lc3DecoderTns.cpp  Lc3DecoderTns.h  LongTermPostfilter.cpp  LongTermPostfilter.hpp  MPVQ.cpp  MPVQ.hpp  MdctDec.cpp  MdctDec.hpp  PacketLossConcealment.cpp  PacketLossConcealment.hpp  ResidualSpectrum.cpp  ResidualSpectrum.hpp  SideInformation.cpp  SideInformation.hpp  SpectralNoiseShaping.cpp  SpectralNoiseShaping.hpp
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/lc3_codec/sneak_peek/Encoder/: AttackDetector.cpp  AttackDetector.hpp  BandwidthDetector.cpp  BandwidthDetector.hpp  Makefile  (+24 more)
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/liblc3/: CMakeLists.txt  liblc3.cpp
mcu_client/nrf5340/K901_NRF5340/: CMakeLists.txt  Kconfig  README.md  app.overlay  download.bat  npm1300_config.overlay  pm_static.yml  prj.conf  sysbuild.conf
mcu_client/nrf5340/K901_NRF5340/src/: main.c  main.h  xyzn_config.h
mcu_client/nrf5340/K901_NRF5340/src/BspLog/: CMakeLists.txt  bsp_log.c  bsp_log.h
mcu_client/nrf5340/K901_NRF5340/src/xyzn_app/: CMakeLists.txt  task_interrupt.c  task_interrupt.h  task_lc3_codec.c  task_lc3_codec.h  task_process.c  task_process.h
mcu_client/nrf5340/K901_NRF5340/src/xyzn_app/protocol_ble/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_app/protocol_ble/src/: protocol_ble_process.c  protocol_ble_send.c  protocol_image_cache.c  protocol_image_flash.c  protocol_image_stream.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_battery/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_battery/src/: xyzn_fuel_gauge.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_ble/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_ble/src/: xyzn_ble.c  xyzn_ble_service.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_lvgl_display/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_lvgl_display/src/: xyzn_lvgl_display.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_pdm/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_pdm/src/: xyzn_pdm.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_proto/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_proto/src/: mentraos_ble.pb.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_sysport/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_sysport/src/: bal_os.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_util/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_components/xyzn_util/src/: xyzn_crc.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_driver/bsp/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_driver/bsp/src/: bsp_board_mcu.c  bsp_gx8002.c  bsp_icm42688p.c  bsp_ict_15318.c  bsp_jsa_1147.c  bsp_key.c  bsp_littlefs.c
mcu_client/nrf5340/K901_NRF5340/src/xyzn_driver/bspal/: CMakeLists.txt
mcu_client/nrf5340/K901_NRF5340/src/xyzn_driver/bspal/src/: bspal_gx8002.c  bspal_icm42688p.c  bspal_ict_15318.c  bspal_jsa_1147.c  bspal_key.c  bspal_watchdog.c
mcu_client/nrf5340/K901_NRF5340/sysbuild/: mcuboot.conf  mcuboot.overlay  private.pem
mcu_client/nrf5340/K901_NRF5340/sysbuild/ipc_radio/: app.overlay  prj.conf
(+2263 files in other folders)
